Fix background z-index

--- a/src/components/model/modelBox.module.css
+++ b/src/components/model/modelBox.module.css
@@ -58,6 +58,7 @@
   scrollbar-width: none;
   transition: all 1s ease-out;
   display: flex;
+  z-index: 1;
 }
 .topGamesHalfShow {
   width: 90%;
